--- a/documents/Topología_I/Tema_2.tex
+++ b/documents/Topología_I/Tema_2.tex
@@ -185,7 +185,7 @@
     Sea $f:\bb{R} \to \bb{R}$ definida por
     \begin{gather*}
         f(x)=\left\{
-        \begin{array}{ccc}
+        \begin{array}{lcl}
             \sen(x)=f_1(x) & \text{ si } & x \in (-\infty, 0] = A_1\\
             x^2(x-1)=f_2(x) & \text{ si } & x \in [0,1] = A_2\\
             -\ln(x) = f_3(x) & \text{ si } & x \in [1, +\infty) = A_3\\
@@ -1094,7 +1094,7 @@ En esta sección estudiaremos cómo a partir de dos e.t. $(X, \cc{T})$, $(Y, \cc
 \begin{ejemplo}\
     \begin{itemize}
         \item $Id_X:(X, \cc{T})\to (X, \cc{T}')$ es identificación $\sii \cc{T}=\cc{T}'$.
-        \item $p: \cc{X}_{[0,\nicefrac{1}{2})}:([0,1], \cc{T}_u|_{[0,1]})\to (\{0,1\}, \cc{T}_f=\{\emptyset, \{0,1\}, \{0\}\})$ es identificación pero no es abierta ni cerrada.
+        \item $p: \chi_{[0,\nicefrac{1}{2})}:([0,1], \cc{T}_u|_{[0,1]})\to (\{0,1\}, \cc{T}_f=\{\emptyset, \{0,1\}, \{0\}\})$ es identificación pero no es abierta ni cerrada.
         \begin{align*}
             p([0,\nicefrac{1}{4})) = \{1\}\notin \cc{T}_f \text{ pero } [0,\nicefrac{1}{4})\in \cc{T}_u|_{[0,1]}\\
             p([\nicefrac{3}{4}, 1])=\{0\}\notin \cc{C}_{\cc{T}_p} \text{ pero } [\nicefrac{3}{4}, 1] \in \cc{C}_{\cc{T}_u\_{[0,1]}}
