--- a/documents/Topología_I/Tema_3.tex
+++ b/documents/Topología_I/Tema_3.tex
@@ -153,7 +153,7 @@ Una primera intuición nos puede decir que un conjunto es conexo si todos sus pu
     \end{proof}
 \end{teo}
 
- \section{Construcción de conexos}
+\subsection{Construcción de conexos}
 
  En general, la unión de conexos no es conexo. En $(\bb{R}, \cc{T}_u)$ tenemos que $]0,1[\cup]2,3[$ no es conexo. La intersección tampoco lo será. Por ejemplo, en $(\bb{S}^1, \cc{T}_u)$ podemos imaginar 2 abiertos que se ``crucen'' y su intersección no será conexa (ya que generará otros 2 abiertos que no estarán conectados) como se ve en la figura a continuación:
 \vspace*{0.25cm}
@@ -273,7 +273,7 @@ Una primera intuición nos puede decir que un conjunto es conexo si todos sus pu
     \endsquare
 \end{ejemplo}
 
-\section{Componentes conexas}
+\subsection{Componentes conexas}
 \begin{definicion}
     Sea $(X, \cc{T})$ un e.t., $x\in X$, se define la \textbf{componente conexa} (c.c.) de $x$ en $(X, \cc{T})$ como la unión de todos los conjuntos conexos de $X$ que contienen a $x$. Se le denota por $\cc{C}(x)$.
     \endsquare
@@ -377,7 +377,7 @@ Una primera intuición nos puede decir que un conjunto es conexo si todos sus pu
     \end{proof}
 \end{prop}
 
-\section{Conexión por arcos}
+\subsection{Conexión por arcos}
 
 \begin{definicion}
     Sea $(X, \cc{T})$ un e.t. 
